--- a/login-register.css
+++ b/login-register.css
@@ -1,43 +1,115 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    text-align: center;
+    background-color: #36393f;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
-    padding: 0;
 }
 
-form {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 300px;
-    margin: 100px auto;
-}
-
-label {
-    display: block;
-    text-align: left;
-    margin-bottom: 5px;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="submit"] {
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
+    height: 100%;
 }
 
-input[type="submit"] {
-    background-color: #313347;
-    color: white;
+.login-box {
+    background-color: #2f3136;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 300px;
+    text-align: center;
+}
+
+.login-box h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #ffffff;
+}
+
+.input-group {
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #b9bbbe;
+}
+
+.input-group input {
+    width: 93.5%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #202225;
+    color: #ffffff;
+}
+
+.input-group input:focus {
+    outline: none;
+    border: 1px solid #7289da;
+}
+
+.policy-container {
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+    margin-left: 60px;
+
+}
+
+.policy-container input[type="checkbox"] {
+    margin-right: 10px;
     cursor: pointer;
 }
 
+.policy-container label {
+    color: #ffffff;
+}
+
+.policy-container a {
+    color: #7289da;
+    text-decoration: none;
+}
+
+.policy-container a:hover {
+    text-decoration: underline;
+}
+
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #7289da;
+    color: #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-bottom: 20px;
+}
+
 input[type="submit"]:hover {
-    background-color: #252837;
+    background-color: #5a6cb2;
+}
+
+p {
+    margin-right: -20px;
+    margin: 10px 0;
+}
+
+p a {
+    color: #7289da;
+    text-decoration: none;
+}
+
+p a:hover {
+    text-decoration: underline;
 }
